Correction quelques fautes + relecture rapide

--- a/src/dossier.tex
+++ b/src/dossier.tex
@@ -9,7 +9,8 @@
 
 
 \author{Bérenger Ossete Gombe}
-\title{Dossier PPP}
+\title{Dossier Projet Professionnel}
+\date{Décembre - Janvier 2015}
 
 %==================== NEW COMMANDS ====================
 %\newcommand{\tabTitle}[1]{\multicolumn{1}{|c|}{\textsc{#1}} }
@@ -51,6 +52,11 @@ Merci également à mon ami Ervan \textsc{Silvert} pour m'avoir fait découvrir 
 Merci enfin aux volontaires ayant donnée leur temps pour un interview improvisé: Alain \textsc{Giorgetti}, Céline \textsc{Libéral}, \textsc{Chriswot} et \textsc{Yakulu}.
 
 \chapter{Guide de lecture}
+\paragraph{}
+Ce dossier est composé de trois grandes parties: le bilan personnel, le projet professionnel et les stratégies d'actions. Dans le sujet, la partie bilan est traitée après le projet. J'ai décidé d'inverser cela car chronologiquement, le bilan personnel est antérieur à l'établissement du projet professionel.
+Je me suis beaucoup aidé des resssources disponibles sur moodle: à commencer par la structure du rapport.
+
+\paragraph{}
 
 \part{Bilan personnel}
 
@@ -88,9 +94,9 @@ Voici un premier lieu un classement de ce que j'estime être mes principaux trai
 \hline
   Curieux & Passionné & Trop agité, éparpillé \\
   \hline
-  Partageur & ??? & ???\\
+  Partageur & Sociable & Dépendant\\
   \hline
-  Volontaire & ??? & ??? \\
+  Volontaire & Dynamique & Entêtement \\
   \hline
   Timide & Réfléchi & Asocial \\
   \hline
@@ -121,10 +127,10 @@ J'ai une certaine connaissance du C++, qui est un langage de programmation que j
 \paragraph{L'importance du partage}
 \subparagraph{}
 Tout ce que j'ai appris en dehors de mes études est principalement dû à internet et aux projets d'éducations pour tous tels Wikipedia ou OpenClassRooms\footnote{Anciennement ``le site du zéro''}.
-Je soutien totalement ce genre de projet qui, je le pense, sont dans l'esprit du siècle des lumières avec leur idéaux de diffusions du savoir. Le partage du savoir permet à tout le monde d'accéder à la connaissance en toute liberté et sans descrimination. Cela m'a permis de découvrir, de me renseigner, d'apprendre. 
+Je soutien totalement ce genre de projet qui, je le pense, sont dans l'esprit du siècle des lumières avec leur idéaux de diffusions du savoir. Le partage du savoir permet à tout le monde d'accéder à la connaissance en toute liberté et sans descrimination. Cela m'a permi de découvrir, de me renseigner, d'apprendre. 
 
 \subparagraph{}
-La découverte apparait alors comme une première étape, le partage de la découverte étant la seconde. Je pense que le partage est nécessaire, et que sans partage on aboutit rapidement  à l'établissement d'une élite intellectuelle. Si le savoir n'est pas partagé alors on entre dans un modèle de confrontation entre ceux qui détiennent le savoir (qui manipule) et les autres (qui tente de se libérer). Je pense que la coopération est le modèle le plus profitable\footnote{Cf. Théorie des jeux} pour tous.
+La découverte apparait alors comme une première étape, le partage de la découverte étant la seconde. Je pense que le partage est nécessaire, et que sans partage on aboutit rapidement  à l'établissement d'une élite intellectuelle. Si le savoir n'est pas partagé alors on entre dans un modèle de confrontation entre ceux qui détiennent le savoir (qui manipule) et les autres (qui tente de se libérer). Je pense que la coopération est le modèle le plus profitable pour tous.
 
 \subparagraph{Exemple} En terminal j'ai fais découvrir à mon meilleur ami la programmation en C++. Il s'est par la suite redirigé vers un cursus informatique (ce qui me permet de croire que mon partage à été concluant et efficace).
 
@@ -133,7 +139,7 @@ La découverte apparait alors comme une première étape, le partage de la déco
 
 \subsection{Valeurs}
 \paragraph{}
-Nous avons vu que mes principales motivations sont l'acquisitions de connaissance puis leurs partages. Derrière ces motivations, se cachent des valeurs.
+Nous avons vu que mes principales motivations sont l'acquisitions de\\ connaissance puis leurs partages. Derrière ces motivations, se cachent des valeurs.
 Mes valeurs tourne autour du respect de la \textbf{liberté} et du \textbf{bon sens}.
 
 %\paragraph{Point rapide sur le libre}
@@ -148,9 +154,9 @@ Mes valeurs tourne autour du respect de la \textbf{liberté} et du \textbf{bon s
 
 \paragraph{Ma découverte du libre}
 
-Ma première expérience de la liberté informatique concerne le site web Wikipédia. J'ai été émerveillé par cette Encyclopédie\footnote{Encyclopédie de Diderot} moderne.
+Ma première expérience de la liberté informatique concerne le site web Wikipédia. J'ai été émerveillé par cette Encyclopédie moderne.
 Ce projet collaboratif permet à tout le monde d'apprendre et de participer à la diffusion des connaissances.
-J'ai ensuite fais connaissance avec l'OS\footnote{Operating System (Système d'exploitation)} Gnu/Linux par pur hasard. J'ai fais alors l'expérience d'une liberté que je ne connaissais pas avec Windows. J'utilisais toujours ce dernier, considérant Gnu/Linux comme une curiosité technologique intéressante. 
+J'ai ensuite fais connaissance avec l'OS\footnote{\textsc{OS}: Operating System (Système d'exploitation)} Gnu/Linux par pur hasard. J'ai fais alors l'expérience d'une liberté que je ne connaissais pas avec Windows. J'utilisais toujours ce dernier, considérant Gnu/Linux comme une curiosité technologique intéressante. 
 Cela a duré jusqu'au moment où je suis tombé par pur hasard (encore une fois) sur une conférence de R.Stallman\footnote{Richard Matthew \textsc{Stallman} (1953 - ): Fondateur de la Free Software Foundation et diffuseur historique des idées du logiciel libre.}. J'ai alors réalisé à quel point la liberté était importante pour moi.
 
 %\paragraph{L'influence du libre sur moi}
@@ -260,7 +266,7 @@ Il s'agit ici de définir ce que je \textsc{\textbf{veux}} faire sans s'occuper 
   \hline
   Les SSII\footnotemark{}/SSLL\footnotemark{} & le libre & trop rare\\
   \hline
-  Developpeur & travail d'équipe & n'existe pas\footnotemark{}\\
+  Developpeur & travail d'équipe & peu créatif\\
   \hline
   La création d'activité & tout & risqué\\
   \hline
@@ -269,9 +275,9 @@ Il s'agit ici de définir ce que je \textsc{\textbf{veux}} faire sans s'occuper 
 \caption{Ce que je veux faire}
 \end{table}
 
-\footnotetext[1]{Société de Service en Ingénierie Informatique (également SS2I) }
-\footnotetext[2]{Société de Service en Logiciel Libre (également SS2L) }
-\footnotetext[3]{Les studios de développement libre sont très rare (TODO)}
+\footnotetext[1]{\textsc{SSII}: Société de Service en Ingénierie Informatique (également SS2I) }
+\footnotetext[2]{\textsc{SSLL}: Société de Service en Logiciel Libre (également SS2L) }
+
 
 \begin{description}
 \item [Enseignement] C'est ce qu'il y a de mieux pour partager sa passion pour l'informatique. Malheureusement je trouve ça trop peu technique: on passe \textbf{tout} son temps à enseigner et donc on a pas le temps d'approfondir véritablement.
@@ -342,7 +348,7 @@ L'originalité de la CAE est d'offrir au porteur de projet un statut "d'entrepre
 Chriswot est un contributeur de LibreOffice australien.
 
 \subsection[Une développeuse de jeux vidéo]{Une développeuse de jeux vidéo: \fbox{Céline Libéral}}
-Céline Libéral possède le ``studio''\footnote{Je ne sais pas comment appeler ça autrement: Célisoft possède une structure juridique.} de jeu libre Célisoft qu'elle à fondé en juin 2014. Elle a travaillé pour des entreprises française avant de se lancer à son propre compte.
+Céline Libéral possède le ``studio''\footnote{Je ne sais pas comment appeler ça autrement: Célisoft possède une structure juridique.} de jeu libre Célisoft qu'elle a fondé en juin 2014. Elle a travaillé pour des entreprises françaises avant de se lancer à son propre compte.
 
 \subsection[Un enseignant-chercheur]{Un enseignant-chercheur: \fbox{Alain Giorgetti} }
 Alain Giorgetti est enseignant-chercheur à l'Université de Franche-Comté. Il est membre de l'équipe de recherche \textsc{Vesontio}\footnote{Vérification et Validation de logiciels et de systèmes embarqués}.\\
@@ -410,7 +416,7 @@ Deux \textbf{volontaires} sont alors intervenus: Chriswot, un contributeur de Li
 \item [Question]:  Tu crois que tu pourrais me parler de ces entreprises ?
 \item [Réponse]:  Il y en des centaines, difficile d'en faire des généralités. Il y a une catégorisation qui est faite dans les docs que je viens de te citer. Le mieux pour avoir des infos reste de contacter ces fédérations d'entreprises du libre, comme la cnll. Tu es dans quel coin de la france ?
 \item [Question]:  D'accord (tes liens vont m'être très utile). Tu as ta propre activité, comment et  pourquoi as tu décidé de le faire ? (Je suis en franche-comté (donc pas grand chose ici)).
-\item [Réponse]:  Il y a une étude\footnote{http://www.cnll.fr/news/resultats-etude-2014/} qui va t'intéresser. J'ai décidé de créer mon activité parce que je voulais travailler sur du logiciel libre, pour des associations et être en accord avec mes valeurs. Je ne suis pas sûr que mon parcours soit hyper pertinent mais j'ai encore un lien\cite{linuxfr_new} pour toi :)
+\item [Réponse]:  Il y a une étude\cite{cnll_etude} qui va t'intéresser. J'ai décidé de créer mon activité parce que je voulais travailler sur du logiciel libre, pour des associations et être en accord avec mes valeurs. Je ne suis pas sûr que mon parcours soit hyper pertinent mais j'ai encore un lien\cite{linuxfr_new} pour toi :)
 \item [Question]:  Ton parcours peut m'intéresser car je pars du même stade: l'envie de travailler sur du logiciel libre et d'être en accord avec mes valeurs !
 \item [Réponse]:  Il a fait une série de dépêches sur linuxfr au sujet de vivre du logiciel libre et a interviewé 5 ou 6 entrepreneur du libres qui se sont lancés. Je vais devoir aller manger un bout en revanche, mais n'hésite pas
 \item [Question]:  Merci beaucoup pour tout tes liens et pour avoir partagé ton expérience avec moi !
@@ -426,7 +432,7 @@ Ce que je retiens donc de cet interview est que les entreprises entièrement lib
 
 
 \subsection{L'interview de Chriswot}
-Chriswot étant anglophone, cet interview à initialement été faite en anglais. Ceci est donc une traduction que je propose. L'originale est disponible en annexe.
+Chriswot étant anglophone, cet interview à initialement été faite en anglais. Ceci est donc une traduction que je propose. L'originale est disponible en annexe\footnote{Page \pageref{chriswot_en}}.
 \begin{description}
 \item [Question]:  Bonjour, et merci !
 \item [Réponse]:  Que veux tu savoir ?
@@ -463,7 +469,7 @@ N'ai pas peur de tout casser sur ta machine: si tu as une branche du code sur gi
 \item [Réponse]:  pour être honnête, je dois dire qu'il s'agit de mon premier travail rémunéré en tant que développeur sur du logiciel libre, mais je pense que oui. Mais je dois dire que j'ai \goodPoint{beaucoup plus de liberté ainsi qu'avec un travail ``normal''}.
 \item [Réponse]:  Je peux ammener mes enfants à l'école le matin, m'occuper de mon appart. Pas de micromanagement\footnote{\textsc{Micromanagement}: Le micromanagement est un style de management où le manager observe ou contrôle étroitement le travail de ses subordonnés ou employés. Ce type de management se caractérise par un contrôle excessif, ou donnant trop d'attention aux détails.} ou ce genre de chose.
 \item [Question]:  Dois tu changer de travail féquemment ?
-\item [Réponse]:  J'ai essayé de faire ça mais j'ai été viré\footnote{Je ne suis pas certain de la traduction: ``Actually, I took on this role when I was made redundant. I got a good payout. Anyhow... I gotta get some coding done - hope I was helpful :-)''}. J'ai été bien payé cependant. Enfin bref, je vais devoir te laisser pour aller manger un truc. J'espère avoir été utile :-) !
+\item [Réponse]:  J'ai essayé de faire ça mais j'ai été viré\footnote{Je ne suis pas certain de la traduction: ``Actually, I took on this role when I was made redundant. I got a good payout. Anyhow... I gotta get some coding done - hope I was helpful :-)''}. J'ai été bien payé cependant... Enfin bref, je vais devoir te laisser, j'ai du code qui m'attend. J'espère avoir été utile :-) !
 \item [Question]:  Tu l'as été ! Merci beaucoup.
 \item [Question] Et désolé pour mon mauvais anglais.
 \item [Réponse]:  Pas de soucis, bonne chance !
@@ -478,8 +484,9 @@ N'ai pas peur de tout casser sur ta machine: si tu as une branche du code sur gi
 \subsection{Bilan}
 \paragraph{Ce que j'ai appris}
 Pour travailler dans le libre, il faut faire de la maintenance.
-La contribution au grand projet (tel le projet LibreOffice) n'est pas rémunerer, ou alors sur une courte période: en tous cas on ne peut pas en vivre. Si on décide de contribuer, il faut alors se trouver un autre métier en parallèle.
-C'est un travail qui apporte plus de liberté qu'un boulot classique (d'après Chriswot), cependant je vois que ça apporte plein de contraines financières.
+La contribution au grand projet (tel le projet LibreOffice) n'est pas rémunérer, ou alors sur une courte période: en tous cas on ne peut pas en vivre. Si on décide de contribuer, il faut alors se trouver un autre métier en parallèle.
+C'est un travail qui apporte plus de liberté qu'un boulot classique (d'après Chriswot), cependant je vois que ça apporte des contraines financières.
+La contribution aux logiciels libres m'intéresse toujours: \textbf{non pas en tant que métier}, mais en tant qu'activité annexe à mon activité professionnelle.
 
 
 \section{Le jeu vidéo et de la création d'entreprise}
@@ -678,14 +685,15 @@ Cependant, il y a tout un pan du métier de chercheur que je ne connaissais pas,
 \subparagraph{le bilan}
 Suite à cet interview, je suis plutôt partagé sur le métier de chercheur.
 Surtout que ce métier s'exerce souvent en couple avec l'enseignement. J'apprécie l'enseignement, mais diviser l'activité de recherche par deux (voir plus) met encore plus en avant les contraintes que j'ai décris plus haut.
-Au final, je me rends compte que \textbf{j'a idéalisé le métier de chercheur} et j'ai oublié les contraintes innérantes au métier.
+Au final, je me rends compte que \textbf{j'ai idéalisé le métier de chercheur} et j'ai oublié les contraintes innérantes au métier.
 
 %\chapter{Confrontation au marché}
 %\section{Les besoins}
 %\section{Les profils recherchés}
 %\section{Mes atouts}
 \section{Bilan du projet professionnel}
-Les différents interview que j'ai réalisé m'ont permient de mieux cerner les différents domaines qui m'intéressent.
+Les différents interview que j'ai réalisé m'ont permis de mieux cerner les différents domaines qui m'intéressent. Pour travailler avec du logiciel libre je peux me tourner du côté des technologies web. J'ai abandonné l'idée de faire du développement de logiciel libre et du jeu vidéo dans mon métier. De plus la recherche me semble un peu moins intéressante. Je me laisse le temps de faire mûrir mon projet professionnel tout en faisant en sorte de ne pas me fermer des portes.
+
 \part{Stratégies d'action}
 
 \chapter{Stratégie d'acquisition de compétences}
@@ -707,7 +715,8 @@ Ce projet de stage me semble abordable et l'entreprise paraît ouverte aux deman
 
 \part{Conclusion}
 \chapter{Apport du module APP et PPP}
-Ce dossier m'a permit de mieux appréhender l'établissement de mon projet professionnel et m'a fait réfléchir autant sur ce que je veux faire que sur mes possibilités.
+Les cours auquels j'ai participé durant ce semestre m'ont ammené à me poser des questions sur ce que je suis, ce que je veux faire, ce que je peux faire et enfin comment je peux le faire.
+Ce dossier en est la synthèse. Il m'a permit de mieux appréhender l'établissement de mon projet professionnel.
 
 \listoftables{}
 
@@ -720,7 +729,7 @@ Ce dossier m'a permit de mieux appréhender l'établissement de mon projet profe
 \chapter{Exercice d'autoportrait}\label{autoportrait}
 \includepdf[pages = 1]{autoportraitCMI.pdf}
 
-\chapter{Interview de Chriswot en anglais}
+\chapter{Interview de Chriswot en anglais}\label{chriswot_en}
 
 \begin{description}
 \item [Question]:  Hi ! Thank you !
